파생변수수정

--- a/EDA/EDA3.ipynb
+++ b/EDA/EDA3.ipynb
@@ -10,12 +10,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
+   "version": "3.8.5-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3"
+   "display_name": "Python 3",
+   "language": "python"
   }
  },
  "nbformat": 4,
@@ -23,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,12 +38,12 @@
     "warnings.filterwarnings('ignore')\n",
     "plt.rc('font',family='Malgun Gothic')\n",
     "plt.rc('axes',unicode_minus=False)\n",
-    "df=pd.read_csv('종목별장애인스포츠활성정보.csv',encoding='cp949')"
+    "df=pd.read_csv('data/종목별장애인스포츠활성정보.csv',encoding='cp949')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +57,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 43
+     "execution_count": 8
     }
    ],
    "source": [
@@ -65,58 +66,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 운동경험자 선호 비율 파생변수 \n",
-    "df['운동경험자선호비율']=(df['운동경험자주요수요비율']+df['운동경험자시간여유선호비율'])/2"
+    "df['운동경험자선호비율']=(df['운동경험자금전여유선호비율']+df['운동경험자시간여유선호비율'])/2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 운동경험자와 비운동경험자의 선호차이\n",
     "df['운동후선호비율']=(df['운동경험자선호비율']-df['비운동경험자종목선호비율']).round(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2=df.loc[:,['수요운동종목소분류명','운동후선호비율']].sort_values('운동후선호비율',ascending=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "        수요운동종목소분류명  운동후선호비율\n",
-       "33              수영     3.70\n",
-       "41         자전거,사이클     3.05\n",
-       "39   보디빌딩(웨이트트레이닝)     2.30\n",
-       "38              요가     1.80\n",
-       "37            맨손체조     1.40\n",
-       "40  체력단련및생활운동_그외종목     1.15\n",
-       "17              탁구     0.90"
+       "       수요운동종목소분류명  운동후선호비율\n",
+       "33             수영     8.65\n",
+       "4      기타스포츠_그외종목     3.85\n",
+       "38             요가     2.55\n",
+       "41        자전거,사이클     1.90\n",
+       "39  보디빌딩(웨이트트레이닝)     1.40"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>수요운동종목소분류명</th>\n      <th>운동후선호비율</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>33</th>\n      <td>수영</td>\n      <td>3.70</td>\n    </tr>\n    <tr>\n      <th>41</th>\n      <td>자전거,사이클</td>\n      <td>3.05</td>\n    </tr>\n    <tr>\n      <th>39</th>\n      <td>보디빌딩(웨이트트레이닝)</td>\n      <td>2.30</td>\n    </tr>\n    <tr>\n      <th>38</th>\n      <td>요가</td>\n      <td>1.80</td>\n    </tr>\n    <tr>\n      <th>37</th>\n      <td>맨손체조</td>\n      <td>1.40</td>\n    </tr>\n    <tr>\n      <th>40</th>\n      <td>체력단련및생활운동_그외종목</td>\n      <td>1.15</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>탁구</td>\n      <td>0.90</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>수요운동종목소분류명</th>\n      <th>운동후선호비율</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>33</th>\n      <td>수영</td>\n      <td>8.65</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>기타스포츠_그외종목</td>\n      <td>3.85</td>\n    </tr>\n    <tr>\n      <th>38</th>\n      <td>요가</td>\n      <td>2.55</td>\n    </tr>\n    <tr>\n      <th>41</th>\n      <td>자전거,사이클</td>\n      <td>1.90</td>\n    </tr>\n    <tr>\n      <th>39</th>\n      <td>보디빌딩(웨이트트레이닝)</td>\n      <td>1.40</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 52
+     "execution_count": 12
     }
    ],
    "source": [
-    "df2.head(7)"
+    "df.loc[:,['수요운동종목소분류명','운동후선호비율']].sort_values('운동후선호비율',ascending=False).head(5)"
    ]
   }
  ]
