파생변변수이름수정

--- a/EDA/EDA3.ipynb
+++ b/EDA/EDA3.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 14
     }
    ],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,38 +76,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 운동경험자와 비운동경험자의 선호차이\n",
-    "df['운동후선호비율']=(df['운동경험자선호비율']-df['비운동경험자종목선호비율']).round(2)"
+    "df['운동전후선호비율차이']=(df['운동경험자선호비율']-df['비운동경험자종목선호비율']).round(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "       수요운동종목소분류명  운동후선호비율\n",
-       "33             수영     8.65\n",
-       "4      기타스포츠_그외종목     3.85\n",
-       "38             요가     2.55\n",
-       "41        자전거,사이클     1.90\n",
-       "39  보디빌딩(웨이트트레이닝)     1.40"
+       "       수요운동종목소분류명  운동전후선호비율차이\n",
+       "33             수영        8.65\n",
+       "4      기타스포츠_그외종목        3.85\n",
+       "38             요가        2.55\n",
+       "41        자전거,사이클        1.90\n",
+       "39  보디빌딩(웨이트트레이닝)        1.40"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>수요운동종목소분류명</th>\n      <th>운동후선호비율</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>33</th>\n      <td>수영</td>\n      <td>8.65</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>기타스포츠_그외종목</td>\n      <td>3.85</td>\n    </tr>\n    <tr>\n      <th>38</th>\n      <td>요가</td>\n      <td>2.55</td>\n    </tr>\n    <tr>\n      <th>41</th>\n      <td>자전거,사이클</td>\n      <td>1.90</td>\n    </tr>\n    <tr>\n      <th>39</th>\n      <td>보디빌딩(웨이트트레이닝)</td>\n      <td>1.40</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>수요운동종목소분류명</th>\n      <th>운동전후선호비율차이</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>33</th>\n      <td>수영</td>\n      <td>8.65</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>기타스포츠_그외종목</td>\n      <td>3.85</td>\n    </tr>\n    <tr>\n      <th>38</th>\n      <td>요가</td>\n      <td>2.55</td>\n    </tr>\n    <tr>\n      <th>41</th>\n      <td>자전거,사이클</td>\n      <td>1.90</td>\n    </tr>\n    <tr>\n      <th>39</th>\n      <td>보디빌딩(웨이트트레이닝)</td>\n      <td>1.40</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 19
     }
    ],
    "source": [
-    "df.loc[:,['수요운동종목소분류명','운동후선호비율']].sort_values('운동후선호비율',ascending=False).head(5)"
+    "df.loc[:,['수요운동종목소분류명','운동전후선호비율차이']].sort_values('운동전후선호비율차이',ascending=False).head(5)"
    ]
   }
  ]
